minor: moved button to gsc helper

--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -49,6 +49,9 @@
                 <div class="collapse navbar-collapse" id="collapse-icon">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
+                            <a style="color: white;" href="{% url 'core:gsc_submission_form' %}">GSC Submission</a>
+                        </li>
+                        <li>
                             <a style="color: white;" href="{% url 'admin:index' %}">Admin</a>
                         </li>
                         <li>
