--- a/core/templates/core/tenx/tenxchip_detail.html
+++ b/core/templates/core/tenx/tenxchip_detail.html
@@ -36,6 +36,7 @@
                     </tr>
                     <tr>
                         <th>Library ID</th>
+                        <th>Sample</th>
                         <th>JIRA Ticket</th>
                         <th>Description</th>
                     </tr>
@@ -44,6 +45,7 @@
                     {% for library in chip.tenxlibrary_set.all %}
                         <tr>
                             <td><a href="{{ library.get_absolute_url }}">{{ library.id }}</a></td>
+                            <td><a href="{{ library.sample.get_absolute_url }}">{{ library.sample }}</a></td>
                             <td><a href="https://www.bcgsc.ca/jira/browse/{{ library.jira_ticket }}">{{ library.jira_ticket }}</a></td>
                             <td>{{ library.description }}</td>
                         </tr>
