--- a/core/templates/core/deploy_beta.html
+++ b/core/templates/core/deploy_beta.html
@@ -1,35 +1,37 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang=en>
-    <head>
-        <meta charset=utf-8>
-        <meta http-equiv=X-UA-Compatible content="IE=edge">
-        <meta name=viewport content="width=device-width,initial-scale=1">
-        <link rel=icon href=/favicon.ico>
-        <title>kudu</title>
-        <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
-        <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
-        <link href="{% static '/dist/css/chunk-10a1067c.d2d526cc.css' %}" rel=prefetch>
-        <link href="{% static '/dist/css/chunk-d03a0356.aadbc438.css' %}" rel=prefetch>
-        <link href="{% static '/dist/js/chunk-10a1067c.29270a5f.js' %}" rel=prefetch>
-        <link href="{% static '/dist/js/chunk-2d0bff12.2a163ae4.js' %}" rel=prefetch>
-        <link href="{% static '/dist/js/chunk-2d0e6293.6117ca40.js' %}" rel=prefetch>
-        <link href="{% static '/dist/js/chunk-d03a0356.ffe22d34.js' %}" rel=prefetch>
-        <link href="{% static '/dist/css/app.91601b4f.css' %}" rel=preload as=style>
-        <link href="{% static '/dist/css/chunk-vendors.56d200a6.css' %}" rel=preload as=style>
-        <link href="{% static '/dist/js/app.03af08e5.js' %}" rel=preload as=script>
-        <link href="{% static '/dist/js/chunk-vendors.f32652bf.js' %}" rel=preload as=script>
-        <link href="{% static '/dist/css/chunk-vendors.56d200a6.css' %}" rel=stylesheet>
-        <link href="{% static '/dist/css/app.91601b4f.css' %}" rel=stylesheet>
-    </head>
-    <body>
-        <noscript>
-            <strong> We're sorry but kudu doesn't work properly without JavaScript enabled. Please enable it to continue. </strong>
-        </noscript>
-        <div id=app></div>
-        <script src="{% static '/dist/js/chunk-vendors.f32652bf.js' %}"></script>
-        <script src="{% static '/dist/js/app.03af08e5.js' %}"></script>
-    </body>
+<head>
+<meta charset=utf-8>
+<meta http-equiv=X-UA-Compatible content="IE=edge">meta name=viewport content="width=device-width,initial-scale=1">
+<link rel=icon href="{% static '/dist/favicon.ico' %}">
+<title>kudu-beta</title>
+<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
+<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
+<link href="{% static '/dist/css/chunk-10a1067c.d2d526cc.css' %}" rel=prefetch>
+<link href="{% static '/dist/css/chunk-d03a0356.aadbc438.css' %}" rel=prefetch>
+<link href="{% static '/dist/js/chunk-10a1067c.29270a5f.js' %}" rel=prefetch>
+<link href="{% static '/dist/js/chunk-2d0bff12.6e24a1df.js' %}" rel=prefetch>
+<link href="{% static '/dist/js/chunk-2d0e6293.bab456b8.js' %}" rel=prefetch>
+<link href="{% static '/dist/js/chunk-d03a0356.87a4367d.js' %}" rel=prefetch>
+<link href="{% static '/dist/css/app.c9b94e57.css' %}" rel=preload as=style>
+<link href="{% static '/dist/css/chunk-vendors.56d200a6.css' %}" rel=preload as=style>
+<link href="{% static '/dist/js/app.7b644299.js' %}" rel=preload as=script>
+<link href="{% static '/dist/js/chunk-vendors.f32652bf.js' %}" rel=preload as=script>
+<link href="{% static '/dist/css/chunk-vendors.56d200a6.css' %}" rel=stylesheet>
+<link href="{% static '/dist/css/app.c9b94e57.css' %}" rel=stylesheet>
+</head>
+<body>
+<noscript>
+<strong>We're sorry but kudu doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<div id=app>
+</div>
+<script src="{% static '/dist/js/chunk-vendors.f32652bf.js' %}">
+</script>
+<script src="{% static '/dist/js/app.7b644299.js' %}">
+</script>
+</body>
 </html>
