--- a/core/templates/core/deploy_beta.html
+++ b/core/templates/core/deploy_beta.html
@@ -1,8 +1,40 @@
-{% load render_bundle from webpack_loader %}
-<html>
-  <body>
-    {% block content %}
-    {% endblock %}
-    {% render_bundle 'app' %}
-  </body>
+{% load static %}
+
+<!DOCTYPE html>
+<html lang=en>
+<head>
+<meta charset=utf-8>
+<meta http-equiv=X-UA-Compatible content="IE=edge">
+<meta name=viewport content="width=device-width,initial-scale=1">
+<link rel=icon href="{% static 'core/favicon.ico' %}">
+<base href="/">
+<title>kudu</title>
+<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
+<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
+<link href="{% static '/dist/css/chunk-10a1067c.3e2532bf.css' %}" rel=prefetch>
+<link href="{% static '/dist/css/chunk-d03a0356.1fdc/cfec.css' %}" rel=prefetch>
+<link href="{% static '/dist/js/chunk-10a1067c.29270a5f.js' %}" rel=prefetch>
+<link href="{% static '/dist/js/chunk-2d0bff12.434478ac.js' %}" rel=prefetch>
+<link href="{% static '/dist/js/chunk-2d0e6293.86c8f571.js' %}" rel=prefetch>
+<link href="{% static '/dist/js/chunk-d03a0356.e26e287b.js' %}" rel=prefetch>
+<link href="{% static '/dist/css/app.c9b94e57.css' %}" rel=preload as=style>
+<link href="{% static '/dist/css/chunk-vendors.d615f525.css' %}" rel=preload as=style>
+<link href="{% static '/dist/js/app.7bff0a89.js' %}" rel=preload as=script>
+<link href="{% static '/dist/js/chunk-vendors.f32652bf.js' %}" rel=preload as=script>
+<link href="{% static '/dist/css/chunk-vendors.d615f525.css' %}" rel=stylesheet>
+<link href="{% static '/dist/css/app.c9b94e57.css' %}" rel=stylesheet>
+</head>
+<body>
+<noscript>
+<strong>We're sorry but kudu doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<div id=app>
+</div>
+<script src="{% static '/dist/js/chunk-vendors.f32652bf.js' %}">
+</script>
+<script src="{% static '/dist/js/app.7bff0a89.js' %}">
+</script>
+</body>
 </html>
