--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -52,6 +52,9 @@
                             <a style="color: white;" href="{% url 'core:gsc_submission_form' %}">GSC Submission</a>
                         </li>
                         <li>
+                            <a style="color: white;" href="{% url 'userguide' %}">Guide</a>
+                        </li>
+                        <li>
                             <a style="color: white;" href="{% url 'admin:index' %}">Admin</a>
                         </li>
                         <li>
