user guide update

--- a/core/templates/core/vue/userguide_pages/home.html
+++ b/core/templates/core/vue/userguide_pages/home.html
@@ -3,12 +3,9 @@
         <div class="headline">Welcome to User Guide page</div>
     </v-card-text>
     <v-card-text class="text--primary">
-        <div class="display-2 font-weight-thin">THOSE ITEMS ON LEFT MENU LOOKS VERY CLICKABLE</div>
-        <div class="display-1 font-weight-thin"><v-icon>mdi-brain</v-icon>(WOW VERY INTUITIVE)<v-icon>mdi-brain</v-icon></div>
-        <br><br>
-        All of these instructions are from Shah Lab's Confluence Wiki:<br>
-        <a href="http://shahcompbio.atlassian.net/wiki/">shahcompbio.atlassian.net/wiki</a><br>
-        For an access to Confluence, please ask <b>Daniel Lai.</b><br><br>
-        And these isntructions have been written by <b>Jecy Wang</b>, so if any question arise, please ask her.
+        <ul>
+            <li><v-btn text @click="page='dlp'">DLP Data Entry</v-btn></li>
+            <li><v-btn text @click="page='tenx'">TenX Data Entry</v-btn></li>
+        </ul>
     </v-card-text>
 </v-card>
