--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -514,6 +514,43 @@
         <a href="{% url 'sisyphus:analysisinformation_create_from_library' from_library=library.pk %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Analysis </a></p>
     </div>
 {% endif %}
+{% if library_type == 'tenx' %}
+<div class="container detail-bordered-container">
+    <h4>Analyses</h4>
+    {% if analyses %}
+            <div class="table-responsive">
+                <table id="analysis-datatable" class="table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Analysis ID</th>
+                            <th>Jira ticket</th>
+                            <th>Pipeline version</th>
+                            <th>Analysis run status</th>
+                            <th>Submission date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for analysis in analyses %}
+                        <tr>
+                            <td><a href="{{ analysis.get_absolute_url }}">{{ analysis.id }}</a></td>
+                            <td><a
+                                    href="https://www.bcgsc.ca/jira/browse/{{ analysis.jira_ticket }}">{{ analysis.jira_ticket }}</a>
+                            </td>
+                            <td>{{ analysis.version }}</td>
+                            <td>{{ analysis.run_status }}</td>
+                            <td>{{ analysis.submission_date }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+    {% else %}
+        <h5><i class="text-warning">There are no analyses for this library!</i></h5>
+    {% endif %}
+
+</div>
+{% endif %}
+
 <!-- end of Analysis Information -->
 
 <!-- footer bottons -->
