--- a/core/templates/core/tenx/tenxsequencing_list.html
+++ b/core/templates/core/tenx/tenxsequencing_list.html
@@ -36,9 +36,15 @@
                         <td>{{ sequencing.sequencing_center }}</td>
                         <td>
                             {% for lane in sequencing.tenxlane_set.all %}
-                            {% for sublib in lane.gsc_sublibrary_names %}
-                            {{sublib}}
-                            {% endfor %}
+                                {% if lane.get_library_from_sublibrary.items %}
+                                    {% for sublibrary, library  in lane.get_library_from_sublibrary.items %}
+                                        {% if library is None %}
+                                            {{sublibrary}}
+                                        {% else %}
+                                            <a href="{{ library.get_absolute_url}} ">{{sublibrary}}</a>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
                             {% endfor %}
                         </td>
                         <td>
